--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,32 @@
-#[tool.coverage.report]
-#exclude_also = [
-#    ""
-#]
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[project]
+name = "KiPyGen"
+version = "1.0"
+requires-python = ">=3.7"
+authors = [
+    {name = "Articha"}
+]
+readme = "readme.md"
+classifiers = [
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Education"
+]
+
+[tool.hatch.build.sources]
+"src" = "kipygen"
+
+[tool.hatch.build]
+packages = ["src"]
+
 [tool.coverage.run]
 include = [
     "src/*"
