Improved pyproject.toml, moved src/* into src/kipygen • Moved src/* into src/kipygen/* • Now tests working only after installation project as package • Changed pyproject.toml accordingly to all changes above

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,11 +21,8 @@ classifiers = [
     "Topic :: Education"
 ]
 
-[tool.hatch.build.sources]
-"src" = "kipygen"
-
 [tool.hatch.build]
-packages = ["src"]
+packages = ["src/kipygen"]
 
 [tool.coverage.run]
 include = [
