--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -14,5 +14,9 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Update pip
+      run: python -m pip install --upgrade pip
+    - name: Install as python package
+      run: python -m pip install .
     - name: Testing code with unittest
       run: python -m unittest
